RESOLVED FIXED99788
Fix build warning.
https://bugs.webkit.org/show_bug.cgi?id=99788
Summary Fix build warning.
Byungwoo Lee
Reported 2012-10-18 18:16:48 PDT
Fix build warning about unused parameter and result.
Attachments
Patch (5.05 KB, patch)
2012-10-18 18:30 PDT, Byungwoo Lee
no flags
Byungwoo Lee
Comment 1 2012-10-18 18:30:28 PDT
Kentaro Hara
Comment 2 2012-10-18 18:36:54 PDT
Comment on attachment 169527 [details] Patch Looks OK
WebKit Review Bot
Comment 3 2012-10-18 20:49:52 PDT
Comment on attachment 169527 [details] Patch Clearing flags on attachment: 169527 Committed r131849: <http://trac.webkit.org/changeset/131849>
WebKit Review Bot
Comment 4 2012-10-18 20:49:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.