Fix build warning. https://bugs.webkit.org/show_bug.cgi?id=99788

Patch by Byungwoo Lee <bw80.lee@samsung.com> on 2012-10-18
Reviewed by Kentaro Hara.

Source/WebCore:

Use UNUSED_PARAM macro for removing -Wunused-parameter.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::currentTransform):

Source/WebKit2:

Remove parameter name or use ASSERT_UNUSED macro for removing
-Wunused-parameter.

* PluginProcess/unix/PluginProcessMainUnix.cpp:
(WebKit::PluginProcessMainUnix):
* UIProcess/Plugins/unix/PluginProcessProxyUnix.cpp:
(WebKit::PluginProcessProxy::platformInitializeLaunchOptions):

Tools:

Use return value of mktemp() for removing -Wunused-result.

* MiniBrowser/efl/main.c:
(on_download_request):

Canonical link: https://commits.webkit.org/117785@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131849 268f45cc-cd09-0410-ab3c-d52691b4dbfc