Source/WebKit2/PluginProcess/unix/PluginProcessMainUnix.cpp
@@ -73,9 +73,9 @@ static int webkitXError(Display* xdisplay, XErrorEvent* error)
 
 WK_EXPORT int PluginProcessMainUnix(int argc, char* argv[])
 {
-    ASSERT(argc == 2 || argc == 3);
+    ASSERT_UNUSED(argc, argc == 2 || argc == 3);
     bool scanPlugin = !strcmp(argv[1], "-scanPlugin");
-    ASSERT(argc == 2 || (argc == 3 && scanPlugin));
+    ASSERT_UNUSED(argc, argc == 2 || (argc == 3 && scanPlugin));
 
 #if PLATFORM(GTK)
     gtk_init(&argc, &argv);
